# Luminara

./: .env  .gitignore  Changelogs.MD  Dockerfile  LICENSE  Pipfile  README.MD  VersionHistory.MD  bot.py  classes.py  config.ini  deta.json  example.env  main.py  node_config_writer.py  nodes.json  pyproject.toml  requirements.txt  settings.json  stop-env.ps1  tempCodeRunnerFile.py  test.py  token.json  update_req.bat  writer.py
.deta/: prog_info  state
.github/workflows/: main.yml
cogs/: BasicCommands.py  MusicCommands.py  basic.py  cmds.py  debug.py  debugs.py  errors.py  eventlister.py  events.py  general.py  music.py  musiccmds.py  slash_debugs.py  tasks.py
cogs/UI/: dropmenu.py
cogs/commands/: copilot.py  funs.py  games.py  general.py  imagegen.py  management.py  music.py  tools.py
cogs/commands/old/: music.py
cogs/events/: errors.py  events.py  tasks.py
cogs/slash_commands/: slash_general.py
core/: classes.py  config.py  config_loader.py  db.py  dbwork.py  debugcmds.py  embed_color.py  icon.py  json_loader.py  lang_loader.py  lib.py  utils.py
core/api/: api.py
core/lavalink/: application.yml  lavalink.py
core/libs/: bot.py  bullshit.py  class_define.py  iptools.py  luminara_api.py  wizmodel.py
core/uptime/: uptime.py
extensions/: debugs.py
extensions/commands/: copilot.py  funs.py  general.py  imagegen.py  management.py  music.py  tools.py
extensions/events/: errors.py  events.py  tasks.py
lavalink node/: application.yml
public/: CNAME
res/lang/: zhTW.json
res/logo/: logo.txt
ui/: musiccontroller.py  view.py
(+1 files in other folders)
